--- a/yacut/templates/header.html
+++ b/yacut/templates/header.html
@@ -8,13 +8,12 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="nav nav-pills">
             <li class="nav-item">
-              <a class="nav-link" href="">
+              <a class="nav-link" href="{{ url_for('index') }}">
                 Главная
               </a>
             </li>
           </ul>
         </div>
-
       </div>
     </nav>
   </header>
